--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
      </div>
      <!-- Right side  -->
     <div style="background-color: rgb(251, 240, 202); width: 100%;">
-      <iframe src="./wel.html" width="1300" id="frame" height="100%"></iframe><br>
+      <iframe src="wel.html" width="1300" id="frame" height="100%"></iframe><br>
     </div>
 
   </div>
