--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <ul>
        <img src="./../day1/logos.html" alt="">
         <b>DAY 1 PROJECTS</b>
-        <li><button onclick="document.getElementById('frame').src='./../day1/h_tags.html'"  class="btnred"  >learn h_tags</button></a></li>
+        <li><button onclick="document.getElementById('frame').src='html projects/day1/h_tags.html'"  class="btnred"  >learn h_tags</button></a></li>
         <li><button  onclick="document.getElementById('frame').src='./../day1/basic_tags.html'" class="btnred"  >learn basic tags</button></a></li>
         <li><button  onclick="document.getElementById('frame').src='./../day1/logos.html'" class="btnred"  >learn to create logo</button></a></li>
         <li><button  onclick="document.getElementById('frame').src='./../day1/img.html'" class="btnred"  >learn to create image</button></a></li>
