--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
        <img src="./../day1/logos.html" alt="">
         <b>DAY 1 PROJECTS</b>
         <li><button onclick="document.getElementById('frame').src='html projects/day1/h_tags.html'"  class="btnred"  >learn h_tags</button></a></li>
-        <li><button  onclick="document.getElementById('frame').src='./../day1/basic_tags.html'" class="btnred"  >learn basic tags</button></a></li>
-        <li><button  onclick="document.getElementById('frame').src='./../day1/logos.html'" class="btnred"  >learn to create logo</button></a></li>
-        <li><button  onclick="document.getElementById('frame').src='./../day1/img.html'" class="btnred"  >learn to create image</button></a></li>
+        <li><button  onclick="document.getElementById('frame').src='html projects/day1/basic_tags.html'" class="btnred"  >learn basic tags</button></a></li>
+        <li><button  onclick="document.getElementById('frame').src='html projects/day1/logos.html'" class="btnred"  >learn to create logo</button></a></li>
+        <li><button  onclick="document.getElementById('frame').src='html projects/day1/img.html'" class="btnred"  >learn to create image</button></a></li>
       </ul>
       <ul>
         <b>DAY 2 PROJECTS</b>
-        <li><button  onclick="document.getElementById('frame').src='./../day2/imageurl.html'" class="btnred"   >learn img hrefernce</button></a></li>  
-        <li> <button  onclick="document.getElementById('frame').src='./../day2/table.html'" class="btnred"  >learn to create tables</button></a></li> 
-        <li> <button  onclick="document.getElementById('frame').src='./../day2/iframee.html'" class="btnred"  >learn to create iframes</button></a></li> 
-        <li> <button  onclick="document.getElementById('frame').src='./../day2/empdetails.html'" class="btnred"  >learn to create emp_details form</button></a></li> 
+        <li><button  onclick="document.getElementById('frame').src='html projects/day2/imageurl.html'" class="btnred"   >learn img hrefernce</button></a></li>  
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day2/table.html'" class="btnred"  >learn to create tables</button></a></li> 
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day2/iframee.html'" class="btnred"  >learn to create iframes</button></a></li> 
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day2/empdetails.html'" class="btnred"  >learn to create emp_details form</button></a></li> 
       </ul>
       <ul>
         <b>DAY 3 PROJECTS</b>
-        <li><button  onclick="document.getElementById('frame').src='./../day3/audio.html'" class="btnred"  >learn audio inserting</button></a></li> 
-        <li> <button  onclick="document.getElementById('frame').src='./../day3/video.html'" class="btnred" >learn video inserting</button></a></li> 
-        <li> <button  onclick="document.getElementById('frame').src='./../day3/outputtag.html'" class="btnred" >learn output tag</button></a></li>
+        <li><button  onclick="document.getElementById('frame').src='html projects/day3/audio.html'" class="btnred"  >learn audio inserting</button></a></li> 
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day3/video.html'" class="btnred" >learn video inserting</button></a></li> 
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day3/outputtag.html'" class="btnred" >learn output tag</button></a></li>
       </ul>
       <ul>
         <b>DAY 4 PROJECTS</b>
-        <li> <button  onclick="document.getElementById('frame').src='./../day4/pseudo.html'" class="btnred" >learn pseudo tag</button></a></li>
-        <li> <button  onclick="document.getElementById('frame').src='./../day4/dropdown.html'" class="btnred" >learn dropdown tag</button></a></li>
-        <li> <button  onclick="document.getElementById('frame').src='./../day4/navigationbar.html'" class="btnred" >learn navgation tag</button></a></li>
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day4/pseudo.html'" class="btnred" >learn pseudo tag</button></a></li>
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day4/dropdown.html'" class="btnred" >learn dropdown tag</button></a></li>
+        <li> <button  onclick="document.getElementById('frame').src='html projects/day4/navigationbar.html'" class="btnred" >learn navgation tag</button></a></li>
           
       </ul>
      </div>
