--- a/index.html
+++ b/index.html
@@ -131,42 +131,42 @@
             <ul class="ulclass">
                 <img src="./../day1/logos.html" alt="">
                 <b>DAY 1 PROJECTS</b>
-                <li><button onclick="document.getElementById('frame').src='project/day1/h_tags.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day1/h_tags.html'" class="btnred"
                         >learn h_tags</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day1/basic_tags.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day1/basic_tags.html'" class="btnred"
                         >learn basic tags</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day1/logos.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day1/logos.html'" class="btnred"
                         >learn to create logo</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day1/img.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day1/img.html'" class="btnred"
                         >learn to create image</button></li>
             </ul>
             <ul class="ulclass">
                 <b>DAY 2 PROJECTS</b>
-                <li><button onclick="document.getElementById('frame').src='project work/day2/imageurl.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project work/day2/imageurl.html'" class="btnred"
                         >learn img hrefernce</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day2/table.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day2/table.html'" class="btnred"
                         >learn to create tables</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day2/iframee.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day2/iframee.html'" class="btnred"
                         >learn to create iframes</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day2/empdetails.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day2/empdetails.html'" class="btnred"
                         >learn to create emp_details form</button></li>
             </ul>
             <ul class="ulclass">
                 <b>DAY 3 PROJECTS</b>
-                <li><button onclick="document.getElementById('frame').src='project/day3/audio.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day3/audio.html'" class="btnred"
                         >learn audio inserting</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day3/video.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day3/video.html'" class="btnred"
                         >learn video inserting</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day3/outputtag.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day3/outputtag.html'" class="btnred"
                         >learn output tag</button></li>
             </ul>
             <ul  class="ulclass">
                 <b>DAY 4 PROJECTS</b>
-                <li><button onclick="document.getElementById('frame').src='project/day4/pseudo.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day4/pseudo.html'" class="btnred"
                         >learn pseudo tag</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day4/dropdown.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html project/day4/dropdown.html'" class="btnred"
                         >learn dropdown tag</button></li>
-                <li><button onclick="document.getElementById('frame').src='project/day4/navigationbar.html'"
+                <li><button onclick="document.getElementById('frame').src='html project/day4/navigationbar.html'"
                         class="btnred" >learn navgation tag</button></li>
 
             </ul>
