--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
             </ul>
             <ul  class="ulclass">
                 <b>DAY 4 PROJECTS</b>
-                <li><button onclick="document.getElementById('frame').src='html project/day4/pseudo.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html projects/day4/pseudo.html'" class="btnred"
                         >learn pseudo tag</button></li>
-                <li><button onclick="document.getElementById('frame').src='html project/day4/dropdown.html'" class="btnred"
+                <li><button onclick="document.getElementById('frame').src='html projects/day4/dropdown.html'" class="btnred"
                         >learn dropdown tag</button></li>
-                <li><button onclick="document.getElementById('frame').src='html project/day4/navigationbar.html'"
+                <li><button onclick="document.getElementById('frame').src='html projects/day4/navigationbar.html'"
                         class="btnred" >learn navgation tag</button></li>
 
             </ul>
